--- a/viewer.html
+++ b/viewer.html
@@ -286,10 +286,10 @@
 				<p class="desktop-only">
 					Use Keyboard:<br>
 					- A,W,S,D to move<br>
-					- Q,R to rotate<br>
+					- Q,E to rotate camera<br>
 					Use Mouse:<br>
 					- Left Click and Drag to Pan<br>
-					- Right Click and Hold to Rotate<br>
+					- Right Click and Hold to Rotate Asset<br>
 					- Mouse Wheel to Zoom In/Out
 				</p>
 			</div>
